--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Alyssa Holbert blog</title>
 </head>
 <body>
-    <h1> Hello! </h1>
+    <img src="images/github-header.png" alt="ようこそ welcome to my blog"
+    <h1> Welcome! </h1>
+    
 </body>
 </html>
