added header to index.html and created a bio page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>Alyssa Holbert blog</title>
 </head>
 <body>
-    <img src="images/github-header.png" alt="ようこそ welcome to my blog"
-    <h1> Welcome! </h1>
+    <img src="images/github-header.png" alt="ようこそ welcome to my blog">
+    
+    <h1 #links> <a src="pages/bio-page.html"> my bio </a>  </h1>
+
+    <h2> About this blog</h2>
+    <p>
+        This blog is documenting my progress in learning to be a web developer.
+    </p>
     
 </body>
 </html>
