--- a/cardflip/card-flip.html
+++ b/cardflip/card-flip.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Flip</title>
+    <link rel="stylesheet" href="cardflipStyles.css">
 </head>
 <body>
     https://www.w3schools.com/howto/howto_css_flip_card.asp
@@ -13,11 +14,11 @@
     <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+            <img src="cat-icon.png" alt="icon" style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
             <h1>Profile</h1>
-            <p>about me/p>
+            <p>about me</p>
             <p>resume</p>
           </div>
         </div>
