--- a/cardflip/card-flip.html
+++ b/cardflip/card-flip.html
@@ -8,18 +8,45 @@
     <link rel="stylesheet" href="cardflipStyles.css">
 </head>
 <body>
-    https://www.w3schools.com/howto/howto_css_flip_card.asp
+    <h1 id="titleheader">Cardflip Animation Test</h1>
 
 
-    <div class="flip-card">
+    <div id="profileCard" class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="cat-icon.png" alt="icon" style="width:300px;height:300px;">
+            <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
           </div>
           <div class="flip-card-back">
             <h1>Profile</h1>
             <p>about me</p>
             <p>resume</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div id="projectsCard" class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Projects</h1>
+            <p>webpages</p>
+            <p>games?</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="blogpostsCard" class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Blog Posts</h1>
+            <p>read about</p>
+            <p>my coding journey</p>
           </div>
         </div>
       </div>
