--- a/cardflip/card-flip.html
+++ b/cardflip/card-flip.html
@@ -29,8 +29,7 @@
                 </div>
                 <div class="flip-card-back">
                   <h1>Profile</h1>
-                  <p>about me</p>
-                  <p>resume</p>
+                  <p>learn about me</p>
                 </div>
               </div>
             </div>
@@ -45,8 +44,7 @@
                 </div>
                 <div class="flip-card-back">
                   <h1>Projects</h1>
-                  <p>webpages</p>
-                  <p>games?</p>
+                  <p>see webpages</p>
                 </div>
               </div>
             </div>
@@ -59,9 +57,8 @@
                     <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
                   </div>
                   <div class="flip-card-back">
-                    <h1>Blog Posts</h1>
-                    <p>read about</p>
-                    <p>my coding journey</p>
+                    <h1>Blog</h1>
+                    <p>read posts</p>
                   </div>
                 </div>
               </div>
