added links to each card back

--- a/cardflip/card-flip.html
+++ b/cardflip/card-flip.html
@@ -28,7 +28,11 @@
                   <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                  <h1>Profile</h1>
+                  <h1>
+                    <a href="https://stackoverflow.com/questions/22940761/best-way-to-create-an-a-link-with-empty-href">
+                          Profile
+                    </a>
+                  </h1>
                   <p>learn about me</p>
                 </div>
               </div>
@@ -43,8 +47,13 @@
                   <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                  <h1>Projects</h1>
-                  <p>see webpages</p>
+                      <h1>
+                        <a href="https://stackoverflow.com/questions/22940761/best-way-to-create-an-a-link-with-empty-href">
+                              Projects
+                        </a>
+                      </h1>
+                      <p>see webpages</p>
+                  </a>
                 </div>
               </div>
             </div>
@@ -57,7 +66,11 @@
                     <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
                   </div>
                   <div class="flip-card-back">
-                    <h1>Blog</h1>
+                    <h1>
+                        <a href="https://stackoverflow.com/questions/22940761/best-way-to-create-an-a-link-with-empty-href">
+                          Blog
+                        </a>
+                    </h1>
                     <p>read posts</p>
                   </div>
                 </div>
