changed header and footer text

--- a/cardflip/card-flip.html
+++ b/cardflip/card-flip.html
@@ -16,8 +16,12 @@
 <body>
 
 <div class="container-fluid">
-  <h1 id="titleheader">Cardflip Animation Test</h1>
 
+  <div class="container text-center" id="header">
+  <h1 id="titleheader">choose your path</h1>
+  </div>
+
+  
       <div class="container">
         <div class="row justify-content-center">
 
@@ -80,7 +84,10 @@
         </div>
       </div>
 
-      <h1 id="pickcardfooter">Pick a card</h1>
+      <div class="container text-center">
+      <h1 id="pickcardfooter">pick a card</h1>
+      </div>
+
 </div>    
 
       
