fixed pathing issue and added new alt text to cats

--- a/pages/home-cardflip.html
+++ b/pages/home-cardflip.html
@@ -7,7 +7,7 @@
 
     <title>Card Flip</title>
 
-    <link rel="stylesheet" href="cardflipStyles.css">
+    <link rel="stylesheet" href="../styles/cardflipStyles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" 
       rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" 
       crossorigin="anonymous">
@@ -29,7 +29,7 @@
             <div id="profileCard" class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
+                  <img src="../resources/cat-icon.png" alt="filler icon; this will be replaced with an actual design later" style="width:150px;height:200px;">
                 </div>
                 <div class="flip-card-back">
                   <h1>
@@ -48,7 +48,7 @@
             <div id="projectsCard" class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
+                  <img src="../resources/cat-icon.png" alt="filler icon; this will be replaced with an actual design later" style="width:150px;height:200px;">
                 </div>
                 <div class="flip-card-back">
                       <h1>
@@ -67,7 +67,7 @@
               <div id="blogpostsCard" class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img src="cat-icon.png" alt="icon" style="width:150px;height:200px;">
+                    <img src="../resources/cat-icon.png" alt="filler icon; this will be replaced with an actual design later" style="width:150px;height:200px;">
                   </div>
                   <div class="flip-card-back">
                     <h1>
