added project page

--- a/pages/home-cardflip.html
+++ b/pages/home-cardflip.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="flip-card-back">
                   <h1>
-                    <a href="https://stackoverflow.com/questions/22940761/best-way-to-create-an-a-link-with-empty-href">
+                    <a href="bio-page.html">
                           Profile
                     </a>
                   </h1>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="flip-card-back">
                       <h1>
-                        <a href="https://stackoverflow.com/questions/22940761/best-way-to-create-an-a-link-with-empty-href">
+                        <a href="project-page.html">
                               Projects
                         </a>
                       </h1>
