added footers and changed card font size

--- a/pages/blog-page.html
+++ b/pages/blog-page.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Blog Posts</title>
+
+    <link rel="stylesheet" href="../styles/main-styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" 
+      rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" 
+      crossorigin="anonymous">
 </head>
-<body>
-    <h1>Blog Posts</h1>
-    <p>This will eventually have blog teasers for each individual post</p>
+<body id="blog-body">
+
+    <div class="container-fluid">
+
+        <div class="container text-center" id="header">
+        <h1 id="blog-header">Blog Posts</h1>
+        </div>
+    
+
+        <p>This page will eventually host my blog posts, with blog teasers linking to each post</p>
+        <p id="footer"> 
+            <a href="home-cardflip.html">
+                < go back 
+            </a>
+        </p>
+
+
+        </div>
+
 </body>
 </html>
