--- a/pages/home-cardflip.html
+++ b/pages/home-cardflip.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous">
 
 </head>
-<body>
+<body id="home-body">
 
 <div class="container-fluid">
 
@@ -32,12 +32,12 @@
                   <img src="../resources/cat-icon.png" alt="filler icon; this will be replaced with an actual design later" style="width:150px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                  <h1>
+                  <h1 id="card-text-head">
                     <a href="bio-page.html">
                           Profile
                     </a>
                   </h1>
-                  <p>learn about me</p>
+                  <p id="card-text-content">learn about me</p>
                 </div>
               </div>
             </div>
@@ -51,12 +51,12 @@
                   <img src="../resources/cat-icon.png" alt="filler icon; this will be replaced with an actual design later" style="width:150px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                      <h1>
+                      <h1 id="card-text-head">
                         <a href="project-page.html">
                               Projects
                         </a>
                       </h1>
-                      <p>see webpages</p>
+                      <p id="card-text-content">see webpages</p>
                   </a>
                 </div>
               </div>
@@ -70,12 +70,12 @@
                     <img src="../resources/cat-icon.png" alt="filler icon; this will be replaced with an actual design later" style="width:150px;height:200px;">
                   </div>
                   <div class="flip-card-back">
-                    <h1>
-                        <a href="https://stackoverflow.com/questions/22940761/best-way-to-create-an-a-link-with-empty-href">
+                    <h1 id="card-text-head">
+                        <a href="blog-page.html">
                           Blog
                         </a>
                     </h1>
-                    <p>read posts</p>
+                    <p class="card-text-content">read posts</p>
                   </div>
                 </div>
               </div>
