--- a/pages/contact-card.html
+++ b/pages/contact-card.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" 
     crossorigin="anonymous">
+
+    <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+
 </head>
 <body>
     
@@ -27,15 +30,15 @@
             <div class="row">
 
                 <div class="col-4">
-                <a href="#" class="btn btn-primary">X</a>
+                    <i id="website-icon" class="bi bi-globe2" style="font-size: 4rem; color: white;"></i>
                 </div>
 
                 <div class="col-4">
-                    <a href="#" class="btn btn-primary">X</a>
+                    <i id="email-icon" class="bi bi-envelope-heart-fill" style="font-size: 4rem; color: white;"></i>
                 </div>
 
                 <div class="col-4">
-                    <a href="#" class="btn btn-primary">X</a>
+                    <i id="github-icon" class="bi bi-github" style="font-size: 4rem; color: white;"></i>
                 </div>
 
             </div>
