--- a/pages/contact-card.html
+++ b/pages/contact-card.html
@@ -34,15 +34,21 @@
                 <div class="row">
 
                     <div class="col-4">
-                        <i id="website-icon" class="bi bi-globe2" style="font-size: 4rem; color: white;"></i>
+                        <a href="https://ah1096.github.io/pages/home-cardflip">
+                            <i id="website-icon" class="bi bi-globe2" style="font-size: 4rem; color: white;"></i>
+                        </a>
                     </div>
 
                     <div class="col-4">
-                        <i id="email-icon" class="bi bi-envelope-heart-fill" style="font-size: 4rem; color: white;"></i>
+                         <a href="mailto:arh.10.96@gmail.com">
+                            <i id="email-icon" class="bi bi-envelope-heart-fill" style="font-size: 4rem; color: white;"></i>
+                         </a>
                     </div>
 
                     <div class="col-4">
-                        <i id="github-icon" class="bi bi-github" style="font-size: 4rem; color: white;"></i>
+                        <a href="https://github.com/ah1096">
+                            <i id="github-icon" class="bi bi-github" style="font-size: 4rem; color: white;"></i>
+                        </a>
                     </div>
 
                 </div>
